Korean language added (fix lng menu align)

--- a/src/app/index/header/header.component.scss
+++ b/src/app/index/header/header.component.scss
@@ -273,7 +273,7 @@ header {
   box-sizing: border-box;
   color: #4AA956;
   text-transform: initial;
-  top: -2px;
+  top: -3px;
   &-list {
     display: block;
     list-style-type: none;
